8272493: Suboptimal code generation around Preconditions.checkIndex intrinsic with AVX2

Reviewed-by: redestad, thartmann